.deploy/k8s/production/deployment-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:22.0.1
          args: ["start-dev"]
          ports:
            - containerPort: 8080
              protocol: TCP
#          readinessProbe:
#            httpGet:
#              path: /realms/master
#              port: 8080
