.deploy/k8s/production/deployment-s3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: s3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-mlflow-subnet: "true"
        io.kompose.service: s3
    spec:
      containers:
        - args:
            - server
            - /data --console-address ':9001'
          image: quay.io/minio/minio
          name: minio
          ports:
            - containerPort: 9001
              protocol: TCP
            - containerPort: 9000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: s3
      hostname: minio
      restartPolicy: Always
      volumes:
        - name: s3
          persistentVolumeClaim:
            claimName: s3
status: {}
