.deploy/k8s/production/service-auth.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    app: keycloak
status:
  loadBalancer: {}
